# hab-gui

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: release.yml  static-analysis-and-test.yml
hab_gui/: __init__.py  cli.py  settings.py  utils.py
hab_gui/actions/: edit_custom_variables_action.py  refresh_action.py  separator_action.py  verbosity_action.py
hab_gui/dialogs/: error_message_box.py  uri_picker_dialog.py
hab_gui/entry_points/: base_init.py  logging_exception.py  message_box.py
hab_gui/gui/: ui_alias_launch.py
hab_gui/resources/: README.md
hab_gui/widgets/: __init__.py  alias_button.py  alias_button_grid.py  alias_icon_button.py  distro_picker.py  flow_layout.py  menu_button.py  name_picker.py  pinned_uris_button.py  refresh_button.py  splash_screen.py  uri_combobox.py  uri_line_edit.py  uri_widgets.py
hab_gui/widgets/custom_variable_editor/: __init__.py  custom_variable_editor.py  file_tree_widget_item.py  variable_tree_widget_item.py
hab_gui/widgets/custom_variable_editor/ui/: custom_variable_editor.ui
hab_gui/widgets/ui/: name_picker.ui
hab_gui/windows/: alias_launch_window.py
tests/: test_echo_message.py  test_utils.py
tests/site/: hab-gui-alt.json  hab-gui-init.json  hab-gui.json
