[metadata]
name = hab_gui
version = file: hab_gui/version.py
description = GUI for user interaction to Hab.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurstudio/hab-gui
author = Blur Studio
author_email = opensource@blur.com
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = any
project_urls =
    Source = https://github.com/blurstudio/hab-gui
    Tracker = https://github.com/blurstudio/hab-gui/issues

[options]
packages = find:
install_requires =
    hab>=0.20.0
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools
    setuptools-scm[toml]>=4
    wheel

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    black==22.12.0
    covdefaults
    coverage
    flake8==5.0.4
    flake8-bugbear==22.12.6
    isort
    pep8-naming==0.13.3
    pytest
    tox

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    E203,
    E501,
    E722,
    W503,
max-line-length = 88
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
